<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:padding="@dimen/dp_15">

        <Button
            android:id="@+id/match_select_photo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/match_tip_txt_view"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/txt_btn_select_photo" />

        <Button
            android:id="@+id/detect_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/match_preview_pic_image_view"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/txt_code_detect" />

        <ImageView
            android:id="@+id/match_preview_pic_image_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:layout_below="@+id/match_tip_txt_view"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_toEndOf="@+id/match_select_photo_btn"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/match_tip_txt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_select_photo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_2"
        android:background="@color/grey"
        android:orientation="horizontal">

        <Button
            android:id="@+id/conn_service_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/test_conn_service" />

        <Button
            android:id="@+id/dis_conn_service_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/conn_service_btn"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/test_dis_conn_service" />

    </LinearLayout>

    <TextView
        android:layout_margin="@dimen/dp_10"
        android:id="@+id/match_result_text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        android:background="@color/white" />

</LinearLayout>
