<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:padding="@dimen/dp_15">

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/txt_btn_select_photo" />

        <Button
            android:id="@+id/btnDetect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/acIvImage"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/dp_5"
            android:text="文本检测" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/acIvImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:layout_below="@+id/tvTitle"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_toEndOf="@+id/btnSelectImage"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_select_photo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2"
        android:background="@color/grey"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <Button
            android:id="@+id/btnConnService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/test_conn_service" />

        <Button
            android:id="@+id/btnDisconnectService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/test_dis_conn_service" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/white"
        android:scrollbars="vertical"
        android:textColor="@color/black" />

</LinearLayout>
